Further improvements to UI, fixing of validation errors, char counter should work regardless of whitespaces or not

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -5,7 +5,7 @@
   border-style: solid;
   overflow-wrap: break-word;
   height: auto;
-  width: auto;
+  width: 610px;
 }
 
 #avatarName {
@@ -55,4 +55,18 @@ footer {
   margin-top: 2%;
   display: flex;
   justify-content: space-between;
+}
+
+@media only screen and (max-width: 480px) {
+  .renderedTweets {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: auto;
+  }
+
+  #handle {
+    display: flex;
+    padding-left: 5px;
+  }
 }
